# SharpVoxTTS

./: .gitignore  Example.cpp  Makefile  README.md
include/: AudioProcessor.h  KlattSynthesizer.h  KlattSynthesizerFP.h  KlattschParser.h  SpeechRenderer.h  SynthData.h  TtsEngine.h  VoiceData.h
platform/cli/: Main.cpp  WavWriter.cpp  WavWriter.h
platform/lib/: SharpVox.cpp  SharpVox.h
platform/rp2040/: .gitignore  CMakeLists.txt  main.cpp
platform/rp2040/test/: serial_speak.py  speaker_loop.py
platform/twatch/sharptalk/: sharpvox_wrapper.cpp
platform/wasm/: SharpVoxWasm.cpp
platform/wasm/wwwroot/: index.html
platform/wasm/wwwroot/js/: main.js  ui.js  worker.js
src/: AudioProcessor.cpp  JapaneseParser.cpp  KlattSynthesizer.cpp  KlattSynthesizerFP.cpp  KlattschParser.cpp  PitchInterpolator.cpp  SpeechRenderer.cpp  Tables.cpp  TtsEngine.cpp
tests/: MidiTimingProbe.cpp
